--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,52 +1,60 @@
-name: Pull Request Validation
+name: Java CI with JUnit
 
 on:
   pull_request:
     branches: [main]
+  workflow_dispatch: # Allows manual triggering
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        java: [17]
-
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: 17
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
 
-    - name: Download JUnit 5
-      run: |
-        mkdir -p lib
-        curl -L https://repo1.maven.org/maven2/org/junit/platform/junit-platform-console-standalone/1.9.3/junit-platform-console-standalone-1.9.3.jar -o lib/junit-platform.jar
+      - name: Create directories
+        run: |
+          mkdir -p bin
+          mkdir -p bin-tests
 
-    - name: Compile main code
-      run: |
-        find src -name "*.java" > sources.txt || echo "No main sources found"
-        [ -s sources.txt ] && javac -d bin -encoding UTF-8 @sources.txt
+      - name: Compile main code
+        run: |
+          find src/cmd -name "*.java" > sources.txt
+          javac -d bin @sources.txt
 
-    - name: Compile tests
-      run: |
-        find tests -name "*.java" > test-sources.txt || echo "No tests found"
-        if [ -s test-sources.txt ]; then
-          javac -d bin-tests -encoding UTF-8 -cp "bin:lib/junit-platform.jar" @test-sources.txt
-        else
-          echo "::error::No test files found in tests/"
-          exit 1
-        fi
+      - name: Compile tests
+        run: |
+          javac -d bin-tests -cp "bin:lib/junit.jar" \
+            tests/bookingMoviesTesting/testBookingDL.java \
+            tests/bookingMoviesTesting/testBookingBL.java \
+            tests/bookingMoviesTesting/testBookingPL.java \
+            tests/browseMoviesTesting/testBrowsingDL.java \
+            tests/browseMoviesTesting/testBrowsingBL.java \
+            tests/browseMoviesTesting/testBrowsingPL.java \
+            tests/checkoutTesting/testCheckoutDL.java \
+            tests/checkoutTesting/testCheckoutBL.java \
+            tests/checkoutTesting/testCheckoutPL.java \
+            tests/manageMoviesTesting/testManageDL.java \
+            tests/manageMoviesTesting/testManageBL.java \
+            tests/manageMoviesTesting/testManagePL.java
 
-    - name: Run tests
-      run: |
-        CLASS_PATH="bin:bin-tests:lib/junit-platform.jar"
-        java -jar lib/junit-platform.jar \
-          --class-path "$CLASS_PATH" \
-          --scan-class-path \
-          --include-classname='.*' \
-          --details tree
+      - name: Run tests
+        run: |
+          java -cp "bin:bin-tests:lib/junit.jar" org.junit.runner.JUnitCore \
+            tests.bookingMoviesTesting.testBookingDL \
+            tests.bookingMoviesTesting.testBookingBL \
+            tests.bookingMoviesTesting.testBookingPL \
+            tests.browseMoviesTesting.testBrowsingDL \
+            tests.browseMoviesTesting.testBrowsingBL \
+            tests.browseMoviesTesting.testBrowsingPL \
+            tests.checkoutTesting.testCheckoutDL \
+            tests.checkoutTesting.testCheckoutBL \
+            tests.checkoutTesting.testCheckoutPL \
+            tests.manageMoviesTesting.testManageDL \
+            tests.manageMoviesTesting.testManageBL \
+            tests.manageMoviesTesting.testManagePL
